# trustyclaw

./: .gitignore  AUTOMATION_TOUCH.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DIAGNOSIS.md  DEPLOYMENT_STATUS.md  HACKATHON_PLAN.md  PR_BODY.md  README.md  TWEETS_SECURITY_THREAD.md  demo.py  deploy.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: architecture-test-review-2026-03-10.md  demo-guide.md  demo-video-script.md  demo-walkthrough.md  hackathon-deck.md  index.html
programs/escrow/: .gitignore  Cargo.toml
programs/escrow/src/: lib.rs
programs/reputation/src/: lib.rs
scripts/: demo.py  deploy-anchor.sh  deploy-escrow.sh  moltbook_demo.py  smoke_tests.py
sdk/: unified_balance.py
src/clawtrust/sdk/: __init__.py  client.py  escrow.py  identity.py  reputation.py
src/clawtrust/skills/discovery/: __init__.py
src/clawtrust/skills/mandate/: __init__.py
src/clawtrust/skills/reputation/: __init__.py
src/tests/unit/: test_agent_registration.py  test_discovery.py  test_escrow.py  test_escrow_contract.py  test_escrow_onchain.py  test_identity.py  test_integration.py  test_mandate.py  test_matching.py  test_reputation.py  test_reputation_chain.py  test_reputation_onchain.py  test_reputation_program.py  test_review_system.py  test_sdk_core.py  test_simple.py  test_skills.py  test_solana_client_retry.py  test_usdc.py  test_usdc_onchain.py  test_usdc_payment.py
src/trustyclaw/: __init__.py
src/trustyclaw/autonomy/: agent_voter.py
src/trustyclaw/contracts/escrow/: Cargo.toml
src/trustyclaw/contracts/escrow/programs/: escrow.rs  reputation.rs
src/trustyclaw/contracts/escrow/tests/: escrow.ts
src/trustyclaw/models/: __init__.py  matching.py  negotiation.py  skill.py
src/trustyclaw/sdk/: __init__.py  auto_executor.py  client.py  cross_chain.py  escrow.py  escrow_contract.py  identity.py  keypair.py  matching.py  reputation.py  reputation_chain.py  retry.py  review_system.py  slashing.py  solana.py  usdc.py  usdc_payment.py
src/trustyclaw/skills/agent_registration/: __init__.py
src/trustyclaw/skills/discovery/: SKILL.md  __init__.py
src/trustyclaw/skills/mandate/: SKILL.md  __init__.py
src/trustyclaw/skills/reputation/: SKILL.md  __init__.py
