[project]
name = "trustyclaw"
version = "0.1.0"
description = "TrustyClaw - Autonomous Reputation Layer for Agent Skills"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "happyclaw-agent", email = "happytreeiot@gmail.com" }]
license = { text = "MIT" }
dependencies = [
  "solana>=0.35,<0.37",
  "solders>=0.21.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.26.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "black>=24.0.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustyclaw"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "C4", "A", "SIM", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/tests/unit"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
