[package]
name = "escrow"
version = "0.1.0"
description = "Simple USDC escrow for agent skill rentals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
test = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
spl-token = "0.38.0"
solana-program = "2.0.0"

[dev-dependencies]
anchor-lang = "0.30.0"
solana-program = "2.0.0"
solana-sdk = "2.0.0"
